# auto_review_tool

./: .coveragerc  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
auto_review_tool/: __init__.py  cli.py  main.py
auto_review_tool/api/: review.py
auto_review_tool/clients/: github_client.py  openai_client.py
auto_review_tool/core/: config.py  logging_config.py  redis_client.py
auto_review_tool/models/: review.py
auto_review_tool/tests/: test_github_client.py  test_openai_client.py  test_review_endpoint.py
